= 3.4.4 (not released yet)
- Fix set_parent for render field on blank records added by default on subforms

= 3.4.3
- default search columns doesn't include association columns (broken on 3.4.2), it slowing down search with no point (searching by association's primary key)
- More unobtrusive html views

= 3.4.2
- fix tableless on latest rails4 versions
- respond with 406 for html request on js only actions
- fix JS issue on IE8
- support jquery-ui-rails 5
- update_columns fixes on subforms refreshing
- fix dynamic links menu in group links
- fix id_condition (/:id/index) for models with different primary key
- fix parent_controller param when rendering subforms on render_field
- fix session usage on rails >= 4.1
- fix marked records on rails >= 4.1
- add display_dynamic_action_group helper to help building js and html to display a dynamic action group
- display error when has_one association with :select form_ui fails to set, save continued but change was lost
- fix each_record_in_scope for rails 4 (fixes mark all records)
- trigger as:element_created for created record

= 3.4.1
- fix search value when both field_search and search are enabled and a search with field_search is active
- fix cancan permissions check on subform
- fix has_one/belongs_to nested with :primary_key option
- fix display of virtual number columns
- fix display of serialized columns on list
- improve tests

= 3.4.0.1
- Fix record_select on field_search

= 3.4.0
- Support rails4
- Quote selected columns
- More unobtrusive html views
- Move () in visibility toggle links inside so they can be overrided
- More helpers to support overriding
- Extend datepicker to load settings from data attributes before onReady event is fired
- Add weight to action links
- Add placeholder in search form
- load existing record on render_field when id is present
- Add helper to override subform label
- embedded? checks that it is displayed embedded, add loading_embedded? to check first loading of embedded